[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-top"
version = "0.1.0"
description = "Top-style monitor for Hermes Agent activity"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "OpenAI Codex" }
]
dependencies = []

[project.scripts]
hermes-top = "hermes_top.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
